@@ -1,9 +1,19 @@
+2010-01-05  Yong Li  <yoli@rim.com>
+
+        Reviewed by Adam Roben.
+
+        Fix  build warnings blindly
+        https://bugs.webkit.org/show_bug.cgi?id=33178
+
+        * platform/SharedBuffer.cpp:
+        * platform/SharedBuffer.h:
+        (WebCore::SharedBuffer::append):
+
 2010-01-05  Dan Bernstein  <mitz@apple.com>
 
         Build fix
 
         * platform/SharedBuffer.cpp:
-        (WebCore::SharedBuffer::append):
 
 2010-01-05  Yong Li  <yong.li@torchmobile.com>
 
